docs(05-03): complete Export UI plan

--- a/.planning/phases/05-anonymization-branding/05-03-PLAN.md
+++ b/.planning/phases/05-anonymization-branding/05-03-PLAN.md
@@ -6,8 +6,7 @@ wave: 3
 depends_on: ["05-02"]
 files_modified:
   - src/renderer/components/export/ExportModal.tsx
-  - src/renderer/components/export/RecruiterSettings.tsx
-  - src/renderer/components/settings/SettingsModal.tsx
+  - src/renderer/routes/Settings.tsx
   - src/renderer/stores/settingsStore.ts
   - src/renderer/App.tsx
   - src/renderer/types/api.d.ts
@@ -28,11 +27,11 @@ must_haves:
     - path: "src/renderer/components/export/ExportModal.tsx"
       provides: "Export dialog with mode selection"
       exports: ["ExportModal"]
-    - path: "src/renderer/components/export/RecruiterSettings.tsx"
-      provides: "Recruiter configuration form"
-      exports: ["RecruiterSettings"]
+    - path: "src/renderer/routes/Settings.tsx"
+      provides: "Unified Settings page with recruiter section added"
+      contains: "Recruiter Details"
     - path: "src/renderer/stores/settingsStore.ts"
-      provides: "Zustand store for app settings"
+      provides: "Zustand store for app settings including recruiter"
       exports: ["useSettingsStore"]
   key_links:
     - from: "src/renderer/components/export/ExportModal.tsx"
@@ -68,24 +67,26 @@ Output: Export modal component, settings integration, bulk export support.
 @.planning/STATE.md
 @.planning/phases/05-anonymization-branding/05-CONTEXT.md
 @.planning/phases/05-anonymization-branding/05-02-SUMMARY.md
+@.planning/phases/04.7-dashboard-enhancements/04.7-05-SUMMARY.md
 @src/renderer/App.tsx
 @src/renderer/stores/queueStore.ts
-@src/renderer/components/settings/SettingsModal.tsx
+@src/renderer/routes/Settings.tsx
 </context>
 
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Create settings store and recruiter settings UI</name>
+  <name>Task 1: Extend settings store and add recruiter section to unified Settings page</name>
   <files>
     src/renderer/stores/settingsStore.ts
-    src/renderer/components/export/RecruiterSettings.tsx
-    src/renderer/components/settings/SettingsModal.tsx
+    src/renderer/routes/Settings.tsx
     src/renderer/types/api.d.ts
   </files>
   <action>
-1. Create `src/renderer/types/api.d.ts` if not exists (or update existing):
-   Add types for export and settings APIs:
+**Note:** Phase 4.7 creates a unified Settings page at `src/renderer/routes/Settings.tsx`. This task extends that page with recruiter settings for blind profile generation.
+
+1. Update `src/renderer/types/api.d.ts` (or create if not exists):
+   Add types for export and recruiter settings APIs:
    ```typescript
    interface RecruiterSettings {
      name?: string;
@@ -147,25 +148,116 @@ Output: Export modal component, settings integration, bulk export support.
    }));
    ```
 
-3. Create `src/renderer/components/export/RecruiterSettings.tsx`:
-   - Simple form with three inputs: Name, Phone, Email
-   - Use terminal theme styling (dark background, purple accents)
-   - Save button calls `saveRecruiterSettings`
-   - Load settings on mount via `loadRecruiterSettings`
-   - Show success/error toast on save
+3. Update `src/renderer/routes/Settings.tsx` to add a Recruiter Details card:
+   The Settings page from Phase 4.7 has this structure:
+   - Header with back button
+   - LLM Settings Card (Processing Mode)
+   - Usage Limits Card
 
-4. Update `src/renderer/components/settings/SettingsModal.tsx`:
-   - Add "Recruiter" tab/section
-   - Import and render `RecruiterSettings` component
-   - If SettingsModal doesn't exist, create minimal modal that includes LLM settings (existing) + Recruiter settings (new)
+   Add a third card for Recruiter Details after Usage Limits:
+   ```typescript
+   // Add imports at top
+   import { useSettingsStore } from '../stores/settingsStore';
+   import { User } from 'lucide-react';
+
+   // Inside the Settings component, after the usage state:
+   const { recruiter, loadRecruiterSettings, saveRecruiterSettings } = useSettingsStore();
+   const [recruiterName, setRecruiterName] = useState(recruiter.name ?? '');
+   const [recruiterPhone, setRecruiterPhone] = useState(recruiter.phone ?? '');
+   const [recruiterEmail, setRecruiterEmail] = useState(recruiter.email ?? '');
+   const [isSavingRecruiter, setIsSavingRecruiter] = useState(false);
+
+   // Load recruiter settings on mount
+   useEffect(() => {
+     loadRecruiterSettings();
+   }, [loadRecruiterSettings]);
+
+   // Sync local state when recruiter changes
+   useEffect(() => {
+     setRecruiterName(recruiter.name ?? '');
+     setRecruiterPhone(recruiter.phone ?? '');
+     setRecruiterEmail(recruiter.email ?? '');
+   }, [recruiter]);
+
+   const handleSaveRecruiter = async () => {
+     setIsSavingRecruiter(true);
+     try {
+       await saveRecruiterSettings({
+         name: recruiterName || undefined,
+         phone: recruiterPhone || undefined,
+         email: recruiterEmail || undefined,
+       });
+       toast.success('Recruiter details saved');
+     } catch (error) {
+       toast.error('Failed to save recruiter details');
+     } finally {
+       setIsSavingRecruiter(false);
+     }
+   };
+
+   // Add this Card after Usage Limits Card in the JSX:
+   {/* Recruiter Details Card */}
+   <Card className="bg-card border-border">
+     <CardHeader>
+       <CardTitle className="flex items-center gap-2">
+         <User className="h-5 w-5" />
+         Recruiter Details
+       </CardTitle>
+       <CardDescription>
+         Your contact details for the Blind Profile footer. Recipients will contact you, not the candidate.
+       </CardDescription>
+     </CardHeader>
+     <CardContent className="space-y-4">
+       <div className="space-y-2">
+         <label className="text-sm font-medium text-foreground">Name</label>
+         <input
+           type="text"
+           value={recruiterName}
+           onChange={(e) => setRecruiterName(e.target.value)}
+           placeholder="Your name"
+           className="w-full px-3 py-2 bg-background border border-input rounded-md text-sm
+                      text-foreground placeholder:text-muted-foreground
+                      focus:outline-none focus:ring-2 focus:ring-primary"
+         />
+       </div>
+       <div className="space-y-2">
+         <label className="text-sm font-medium text-foreground">Phone</label>
+         <input
+           type="tel"
+           value={recruiterPhone}
+           onChange={(e) => setRecruiterPhone(e.target.value)}
+           placeholder="Your phone number"
+           className="w-full px-3 py-2 bg-background border border-input rounded-md text-sm
+                      text-foreground placeholder:text-muted-foreground
+                      focus:outline-none focus:ring-2 focus:ring-primary"
+         />
+       </div>
+       <div className="space-y-2">
+         <label className="text-sm font-medium text-foreground">Email</label>
+         <input
+           type="email"
+           value={recruiterEmail}
+           onChange={(e) => setRecruiterEmail(e.target.value)}
+           placeholder="Your email address"
+           className="w-full px-3 py-2 bg-background border border-input rounded-md text-sm
+                      text-foreground placeholder:text-muted-foreground
+                      focus:outline-none focus:ring-2 focus:ring-primary"
+         />
+       </div>
+       <Button onClick={handleSaveRecruiter} disabled={isSavingRecruiter}>
+         {isSavingRecruiter ? 'Saving...' : 'Save Details'}
+       </Button>
+     </CardContent>
+   </Card>
+   ```
   </action>
   <verify>
 1. TypeScript compiles: `npm run type-check`
-2. Open Settings in app, see Recruiter section
+2. Open Settings page in app, see Recruiter Details section below Usage Limits
 3. Enter recruiter details, save, reload app, verify details persist
   </verify>
   <done>
-Settings store exists. Recruiter settings UI allows entering name/phone/email. Settings persist via IPC.
+Settings store created. Recruiter Details card added to unified Settings page. Settings persist via IPC.
   </done>
 </task>
 
@@ -346,7 +438,7 @@ Complete export workflow:
 - Blind profile toggle
 - Single CV export from queue
 - Bulk export for multiple CVs
-- Recruiter settings in Settings dialog
+- Recruiter settings in unified Settings page (from Phase 4.7)
   </what-built>
   <how-to-verify>
 1. Start the app: `npm start`
@@ -357,14 +449,15 @@ Complete export workflow:
    - Three mode options (Full, Client, Punt)
    - Client mode pre-selected
    - "Include Blind Profile" checkbox (checked by default)
-6. Go to Settings, enter recruiter details (name, phone, email), save
-7. Export a CV in Client mode with blind profile
-8. Check Downloads folder for output PDF:
+6. Navigate to Settings page via sidebar, scroll to "Recruiter Details" section
+7. Enter recruiter details (name, phone, email), save
+8. Export a CV in Client mode with blind profile
+9. Check Downloads folder for output PDF:
    - First page should be Blind Profile with recruiter footer
    - CV pages follow with phone/email redacted (blank space)
-9. Export same CV in Punt mode - verify name also removed from CV
-10. Export in Full mode - verify no redaction
-11. Test bulk export: select multiple CVs, export to specific folder
+10. Export same CV in Punt mode - verify name also removed from CV
+11. Export in Full mode - verify no redaction
+12. Test bulk export: select multiple CVs, export to specific folder
   </how-to-verify>
   <resume-signal>Type "approved" if export workflow works correctly, or describe any issues found</resume-signal>
 </task>
@@ -376,7 +469,7 @@ Complete export workflow:
 2. Export modal opens from queue item
 3. Three modes selectable with Client as default
 4. Blind profile toggle works
-5. Recruiter settings save and persist
+5. Recruiter settings save and persist in unified Settings page
 6. Exported PDF has correct structure:
    - Full: No changes
    - Client: Phone/email removed (blank space)
@@ -385,29 +478,31 @@ Complete export workflow:
    - Page 1: Blind Profile with recruiter box
    - Page 2+: Original CV (redacted per mode)
 8. Bulk export works for multiple CVs
-9. **End-to-end performance test (<500ms requirement)**:
-   - Open DevTools console
-   - Run timing test:
-   ```javascript
-   const start = performance.now();
-   await window.api.exportCV(cvId, 'client', null, true);
-   const elapsed = performance.now() - start;
-   console.log(`Export completed in ${elapsed.toFixed(0)}ms`);
-   // MUST be <500ms for typical 2-3 page CV with blind profile
-   ```
-   - This measures: IPC call + Python redaction + blind profile generation + PDF merge + file write
-   - If >500ms, investigate which step is slow (add timing logs to Python main.py export_cv handler)
+9. Recruiter Details card appears in Settings page (below Usage Limits)
+10. **End-to-end performance test (<500ms requirement)**:
+    - Open DevTools console
+    - Run timing test:
+    ```javascript
+    const start = performance.now();
+    await window.api.exportCV(cvId, 'client', null, true);
+    const elapsed = performance.now() - start;
+    console.log(`Export completed in ${elapsed.toFixed(0)}ms`);
+    // MUST be <500ms for typical 2-3 page CV with blind profile
+    ```
+    - This measures: IPC call + Python redaction + blind profile generation + PDF merge + file write
+    - If >500ms, investigate which step is slow (add timing logs to Python main.py export_cv handler)
 </verification>
 
 <success_criteria>
 - Export modal renders with terminal theme styling
 - Mode selection defaults to "Client"
 - Blind profile checkbox defaults to checked
-- Recruiter warning appears if not configured
+- Recruiter warning appears if not configured (links to Settings page)
 - Single export saves to Downloads
 - Bulk export saves to user-selected folder
 - Exported PDFs are valid and open correctly
 - All three modes produce correct output
+- Recruiter Details section visible in unified Settings page
 </success_criteria>
 
 <output>
