docs(07): plan revisions from checker verification loop

--- a/.planning/phases/07-testing-and-bug-fixing-protocol/07-02-PLAN.md
+++ b/.planning/phases/07-testing-and-bug-fixing-protocol/07-02-PLAN.md
@@ -16,7 +16,7 @@ autonomous: true
 
 must_haves:
   truths:
-    - "20+ unit tests exist per critical Python module (parsers, extractors, normalizers, export)"
+    - "10+ unit tests exist per critical Python module (parsers, extractors, normalizers, export)"
     - "Edge case corpus covers null, empty, unicode, injection, path traversal, huge inputs"
     - "Hypothesis property-based tests generate thousands of fuzz cases for parsers"
     - "All tests pass with pytest"
@@ -54,7 +54,7 @@ must_haves:
 Generate a comprehensive self-audit test suite for all critical Python modules: parsers, extractors, normalizers, export, and schema. Include adversarial edge cases (null, empty, unicode, injection, huge inputs) and Hypothesis property-based tests for fuzzing.
 
 Purpose: Find bugs by trying to break every function with hostile inputs. These tests act as a permanent regression safety net.
-Output: 7 test files with 100+ tests total, all passing with pytest.
+Output: 7 test files with 60+ meaningful tests focusing on critical paths, all passing with pytest.
 </objective>
 
 <execution_context>
@@ -99,7 +99,7 @@ Output: 7 test files with 100+ tests total, all passing with pytest.
 
 2. Create `python-src/tests/conftest.py` with shared fixtures:
    - `sample_cv_text`: Multi-paragraph realistic CV text with contact info, work history, education, skills
-   - `edge_case_strings`: List of adversarial strings (None, "", " ", "\n", "\x00", "\ufeff", "a"*100000, XSS payloads, SQL injection, path traversal, Windows reserved names, lone surrogates)
+   - `edge_case_strings`: List of adversarial strings (None, "", " ", "\n", "\x00", "\ufeff", "a"\*100000, XSS payloads, SQL injection, path traversal, Windows reserved names, lone surrogates)
    - `sample_contact_block`: Text block with name, phone, email, address
    - `tmp_pdf_path`: Creates a minimal valid PDF file in tmp for parser testing (use reportlab or just write raw PDF bytes)
    - Add `sys.path.insert(0, ...)` to ensure python-src is importable
@@ -130,12 +130,10 @@ Output: 7 test files with 100+ tests total, all passing with pytest.
    - 10+ tests
 
 Run `cd python-src && python -m pytest tests/ -v` to verify all pass.
-  </action>
-  <verify>
-    - `cd python-src && python -m pytest tests/test_parsers.py tests/test_normalizers.py tests/test_schema.py -v` all pass
-    - Each test file has 10+ test functions
-  </verify>
-  <done>Parser tests cover valid/invalid/missing/corrupt inputs. Normalizer tests cover all date formats and edge cases. Schema tests validate structure. All pass.</done>
+</action>
+<verify> - `cd python-src && python -m pytest tests/test_parsers.py tests/test_normalizers.py tests/test_schema.py -v` all pass - Each test file has 10+ test functions
+</verify>
+<done>Parser tests cover valid/invalid/missing/corrupt inputs. Normalizer tests cover all date formats and edge cases. Schema tests validate structure. All pass.</done>
 </task>
 
 <task type="auto">
@@ -186,30 +184,28 @@ Run `cd python-src && python -m pytest tests/ -v` to verify all pass.
 
 Run full suite: `cd python-src && python -m pytest tests/ -v --tb=short`
 Fix any bugs found (this is expected - the tests are designed to find bugs).
-  </action>
-  <verify>
-    - `cd python-src && python -m pytest tests/ -v` all pass (after bug fixes)
-    - `python -m pytest tests/ --co -q` shows 100+ test items (including parametrized)
-    - `test_edge_cases.py` includes `from hypothesis import given, strategies`
-  </verify>
-  <done>Extractor tests cover all extraction modules with valid/invalid/edge inputs. Export tests cover redaction modes and blind profiles. Edge case corpus with 15+ adversarial strings parametrized across all functions. Hypothesis fuzz tests generate thousands of random inputs. All pass after bug fixes.</done>
+</action>
+<verify> - `cd python-src && python -m pytest tests/ -v` all pass (after bug fixes) - `python -m pytest tests/ --co -q` shows 60+ test items (including parametrized) - `test_edge_cases.py` includes `from hypothesis import given, strategies`
+</verify>
+<done>Extractor tests cover all extraction modules with valid/invalid/edge inputs. Export tests cover redaction modes and blind profiles. Edge case corpus with 15+ adversarial strings parametrized across all functions. Hypothesis fuzz tests generate thousands of random inputs. All pass after bug fixes.</done>
 </task>
 
 </tasks>
 
 <verification>
 1. `cd python-src && python -m pytest tests/ -v` shows all tests passing
-2. `python -m pytest tests/ --co -q | wc -l` shows 100+ test items
+2. `python -m pytest tests/ --co -q | wc -l` shows 60+ test items
 3. `grep -c "def test_" python-src/tests/*.py` shows 20+ per file
 4. `grep "hypothesis" python-src/tests/test_edge_cases.py` confirms property-based tests
 </verification>
 
 <success_criteria>
-- 100+ Python test cases across 7 files, all passing
+
+- 60+ Python test cases across 7 files, all passing
 - Edge case corpus: null, empty, negative, unicode, 100k strings, injection payloads
 - Hypothesis property-based tests for parsers and normalizers
 - Any bugs found during testing are FIXED (tests should pass, not be skipped)
-</success_criteria>
+  </success_criteria>
 
 <output>
 After completion, create `.planning/phases/07-testing-and-bug-fixing-protocol/07-02-SUMMARY.md`
