--- a/.planning/phases/07-testing-and-bug-fixing-protocol/07-04-PLAN.md
+++ b/.planning/phases/07-testing-and-bug-fixing-protocol/07-04-PLAN.md
@@ -5,8 +5,7 @@ type: execute
 wave: 3
 depends_on: ["07-02", "07-03"]
 files_modified:
-  - python-src/**/*.py
-  - src/main/*.ts
+  - "Files depend on audit findings - expect 5-15 files with validation gaps across python-src/ and src/main/"
 autonomous: false
 
 must_haves:
@@ -54,14 +53,24 @@ Output: Clean scan results, all bugs fixed, quality gate verified.
 <task type="auto">
   <name>Task 1: Run security audit and fix all findings</name>
   <files>
-    python-src/**/*.py
-    src/main/*.ts
+    Files depend on audit findings - expect 5-15 files with validation gaps across python-src/ and src/main/
   </files>
   <action>
+0. Verify test infrastructure exists before proceeding:
+   ```bash
+   # Python test files from 07-02
+   ls python-src/tests/conftest.py python-src/tests/test_parsers.py python-src/tests/test_extractors.py python-src/tests/test_normalizers.py python-src/tests/test_export.py python-src/tests/test_schema.py python-src/tests/test_edge_cases.py
+   # TypeScript test files from 07-03
+   ls src/main/__tests__/database.test.ts src/main/__tests__/queueManager.test.ts src/main/__tests__/pythonManager.test.ts src/main/__tests__/ipcHandlers.test.ts
+   ```
+   If any files are missing, STOP and report which prerequisite plan (07-02 or 07-03) needs to run first.
+
 1. Run ruff security scan:
+
    ```bash
    cd python-src && python -m ruff check . --select S --output-format=full
    ```
+
    Fix all findings:
    - S101: assert usage (only in tests, already allowed via per-file-ignores)
    - S105/S106: hardcoded passwords/secrets
@@ -72,34 +81,43 @@ Output: Clean scan results, all bugs fixed, quality gate verified.
    - Any other Bandit security rule violations
 
 2. Run gitleaks secret scan:
+
    ```bash
    gitleaks detect --source . --no-git -v
    ```
+
    If gitleaks is not installed, use: `pip install gitleaks` or scan manually for:
    - API keys in code/comments (grep for common patterns: sk-, pk-, api_key, secret, password, token)
    - Hardcoded credentials in config files
    - Tokens in error messages or logs
-   Fix all real findings. Add false positives to `.gitleaks.toml` allowlist.
+     Fix all real findings. Add false positives to `.gitleaks.toml` allowlist.
 
 3. Run mypy:
+
    ```bash
    cd python-src && python -m mypy . --ignore-missing-imports --check-untyped-defs
    ```
+
    Fix blocking errors. For existing untyped code, add minimal type annotations where mypy reports actual bugs (wrong types being passed). Do NOT add full strict typing - just fix real type bugs.
 
 4. Run tsc:
+
    ```bash
    npx tsc --noEmit
    ```
+
    Fix any type errors found.
 
 5. Run eslint:
+
    ```bash
    npx eslint src/ --ext .ts,.tsx
    ```
+
    Fix lint errors.
 
 6. Run full test suites to verify fixes don't break anything:
+
    ```bash
    npx vitest run
    cd python-src && python -m pytest tests/ -v
@@ -111,16 +129,16 @@ Output: Clean scan results, all bugs fixed, quality gate verified.
    - Raw SQL string concatenation (should use parameterized queries)
    - User-controlled file paths without sanitization
    - IPC handlers that don't validate input types
-   Fix any findings.
-  </action>
-  <verify>
-    - `cd python-src && python -m ruff check . --select S` reports 0 errors (or only allowed ones)
-    - `npx tsc --noEmit` exits 0
-    - `npx vitest run` all pass
-    - `cd python-src && python -m pytest tests/ -v` all pass
-  </verify>
-  <done>Ruff security scan clean. No secrets in codebase. mypy runs without blocking errors. tsc passes. All tests still pass after fixes. Manual security patterns checked.</done>
-</task>
+     Fix any findings.
+     </action>
+     <verify>
+   - `cd python-src && python -m ruff check . --select S` reports 0 errors (or only allowed ones)
+   - `npx tsc --noEmit` exits 0
+   - `npx vitest run` all pass
+   - `cd python-src && python -m pytest tests/ -v` all pass
+     </verify>
+     <done>Ruff security scan clean. No secrets in codebase. mypy runs without blocking errors. tsc passes. All tests still pass after fixes. Manual security patterns checked.</done>
+     </task>
 
 <task type="checkpoint:human-verify" gate="blocking">
   <what-built>Complete quality gate chain: CLAUDE.md session checklist, pre-commit hooks (Husky + lint-staged), scanner stack (ruff/Bandit, mypy, gitleaks), 160+ unit tests (Python pytest + JS vitest), security audit with all findings fixed.</what-built>
@@ -146,13 +164,14 @@ Output: Clean scan results, all bugs fixed, quality gate verified.
 </verification>
 
 <success_criteria>
+
 - Zero high-severity security findings from ruff Bandit scan
 - Zero secrets detected by gitleaks
 - tsc and mypy pass without blocking errors
 - All 160+ tests pass (Python + TypeScript combined)
 - Security audit complete: no eval/exec, no raw SQL, no unsanitized paths
 - Human verification approved
-</success_criteria>
+  </success_criteria>
 
 <output>
 After completion, create `.planning/phases/07-testing-and-bug-fixing-protocol/07-04-SUMMARY.md`
