--- a/.planning/phases/07-testing-and-bug-fixing-protocol/07-01-PLAN.md
+++ b/.planning/phases/07-testing-and-bug-fixing-protocol/07-01-PLAN.md
@@ -18,10 +18,10 @@ autonomous: true
 
 must_haves:
   truths:
-    - "Pre-commit hook blocks commits with lint errors or type errors"
-    - "CLAUDE.md exists with 7-point mandatory checklist"
-    - "Ruff with Bandit rules configured for Python security scanning"
-    - "Gitleaks blocks commits containing secrets"
+    - "Commits with lint errors are automatically blocked before reaching the repo"
+    - "Every Claude session starts with a clear safety checklist of 7 verification steps"
+    - "Python code is continuously scanned for known vulnerability patterns (Bandit rules)"
+    - "Secrets accidentally added to code are caught before commit"
   artifacts:
     - path: "CLAUDE.md"
       provides: "Session gate with mandatory pre-completion checks"
@@ -89,9 +89,9 @@ Output: All config files, hooks installed and functional.
 2. Create `pyproject.toml` in repo root with:
    - `[tool.ruff]`: target-version = "py312", line-length = 120, src = ["python-src"]
    - `[tool.ruff.lint]`: select = ["E", "W", "F", "I", "B", "S", "UP", "SIM"]
-   - `[tool.ruff.lint.per-file-ignores]`: "python-src/tests/*" = ["S101"] (allow assert in tests)
+   - `[tool.ruff.lint.per-file-ignores]`: "python-src/tests/\*" = ["S101"] (allow assert in tests)
    - `[tool.mypy]`: python_version = "3.12", check_untyped_defs = true, ignore_missing_imports = true, mypy_path = "python-src"
-   - `[tool.pytest.ini_options]`: testpaths = ["python-src/tests"], python_files = "test_*.py"
+   - `[tool.pytest.ini_options]`: testpaths = ["python-src/tests"], python*files = "test*\*.py"
 
 3. Create `vitest.config.ts` in repo root:
    - Standalone config (do NOT extend Forge Vite configs)
@@ -101,13 +101,10 @@ Output: All config files, hooks installed and functional.
    - globals: true
 
 IMPORTANT: Do NOT extend or import from forge vite configs (vite.main.config.ts, vite.renderer.config.ts). vitest.config.ts must be fully standalone.
-  </action>
-  <verify>
-    - `CLAUDE.md` exists and contains "Mandatory Pre-Completion Checks"
-    - `pyproject.toml` exists and contains [tool.ruff] and [tool.mypy] sections
-    - `vitest.config.ts` exists and imports from 'vitest/config'
-  </verify>
-  <done>CLAUDE.md has 7-point checklist with exact commands. pyproject.toml configures ruff (with Bandit S rules), mypy, and pytest. vitest.config.ts is standalone and ready for unit tests.</done>
+</action>
+<verify> - `CLAUDE.md` exists and contains "Mandatory Pre-Completion Checks" - `pyproject.toml` exists and contains [tool.ruff] and [tool.mypy] sections - `vitest.config.ts` exists and imports from 'vitest/config'
+</verify>
+<done>CLAUDE.md has 7-point checklist with exact commands. pyproject.toml configures ruff (with Bandit S rules), mypy, and pytest. vitest.config.ts is standalone and ready for unit tests.</done>
 </task>
 
 <task type="auto">
@@ -127,24 +124,30 @@ IMPORTANT: Do NOT extend or import from forge vite configs (vite.main.config.ts,
    ```
 
 2. Initialize Husky 9:
+
    ```bash
    npx husky init
    ```
+
    This creates `.husky/` directory and adds "prepare": "husky" to package.json scripts.
 
 3. Create `.husky/pre-commit` hook script:
+
    ```bash
    npx lint-staged
    ```
+
    NOTE: Do NOT add `pre-commit run` for Python hooks yet. The Python pre-commit framework requires `pip install pre-commit` which is a dev dependency. Add a comment noting it can be enabled when pre-commit is installed. On Windows, semgrep hooks may have issues - keep it simple.
 
 4. Create `.lintstagedrc.json`:
+
    ```json
    {
      "*.{ts,tsx}": ["eslint --fix"],
      "*.{ts,tsx,js,json,md}": ["prettier --write"]
    }
    ```
+
    NOTE: Do NOT include tsc in lint-staged (needs full project context). tsc runs separately.
 
 5. Add scripts to package.json:
@@ -155,6 +158,7 @@ IMPORTANT: Do NOT extend or import from forge vite configs (vite.main.config.ts,
    - "prepare": "husky" (should already be added by husky init)
 
 6. Create `.pre-commit-config.yaml` for Python-side hooks:
+
    ```yaml
    repos:
      - repo: https://github.com/astral-sh/ruff-pre-commit
@@ -168,6 +172,7 @@ IMPORTANT: Do NOT extend or import from forge vite configs (vite.main.config.ts,
        hooks:
          - id: gitleaks
    ```
+
    NOTE: Omit semgrep from pre-commit hooks for now (Windows compatibility concern from research). Semgrep can be run manually or in CI.
 
 7. Create `.gitleaks.toml`:
@@ -179,24 +184,19 @@ IMPORTANT: Do NOT extend or import from forge vite configs (vite.main.config.ts,
    - Ignore e2e/ (test code)
 
 9. Install Python dev dependencies:
+
    ```bash
    cd python-src && pip install ruff mypy pytest pytest-cov hypothesis
    ```
+
    Add these to a `requirements-dev.txt` file in python-src/.
 
 10. Run `npx husky` to verify hooks are installed. Run `npx lint-staged --diff="HEAD"` to verify lint-staged config parses correctly.
-  </action>
-  <verify>
-    - `npx husky --version` prints version (Husky installed)
-    - `.husky/pre-commit` exists and contains "lint-staged"
-    - `cat .lintstagedrc.json` shows valid JSON
-    - `.pre-commit-config.yaml` exists with ruff and gitleaks hooks
-    - `.gitleaks.toml` exists
-    - `package.json` contains "test", "typecheck", "prepare" scripts
-    - `python-src/requirements-dev.txt` exists with ruff, mypy, pytest, hypothesis
-  </verify>
-  <done>Husky 9 pre-commit hook runs lint-staged on JS/TS files. Python pre-commit config has ruff and gitleaks hooks. Gitleaks allowlist prevents false positives. All dev dependencies installed for both ecosystems.</done>
-</task>
+    </action>
+    <verify> - `npx husky --version` prints version (Husky installed) - `.husky/pre-commit` exists and contains "lint-staged" - `cat .lintstagedrc.json` shows valid JSON - `.pre-commit-config.yaml` exists with ruff and gitleaks hooks - `.gitleaks.toml` exists - `package.json` contains "test", "typecheck", "prepare" scripts - `python-src/requirements-dev.txt` exists with ruff, mypy, pytest, hypothesis - Verify hook blocks bad commits: create a file with a lint error (e.g., `echo "const x = 1" > test-hook.ts`), stage it (`git add test-hook.ts`), attempt `git commit -m "test"`, verify the hook runs lint-staged and blocks the commit. Clean up: `git reset HEAD test-hook.ts && rm test-hook.ts`
+    </verify>
+    <done>Husky 9 pre-commit hook runs lint-staged on JS/TS files. Python pre-commit config has ruff and gitleaks hooks. Gitleaks allowlist prevents false positives. All dev dependencies installed for both ecosystems.</done>
+    </task>
 
 </tasks>
 
@@ -209,12 +209,13 @@ IMPORTANT: Do NOT extend or import from forge vite configs (vite.main.config.ts,
 </verification>
 
 <success_criteria>
+
 - CLAUDE.md exists with 7-point mandatory checklist
 - Pre-commit hook triggers lint-staged on JS/TS staged files
 - pyproject.toml configures ruff with security rules, mypy, pytest
 - vitest.config.ts ready for unit tests (standalone, not extending Forge)
 - All scanner tools installed and individually executable
-</success_criteria>
+  </success_criteria>
 
 <output>
 After completion, create `.planning/phases/07-testing-and-bug-fixing-protocol/07-01-SUMMARY.md`
