docs(10): update plan files

--- a/.planning/phases/10-outreach-workflow-engine/10-01-PLAN.md
+++ b/.planning/phases/10-outreach-workflow-engine/10-01-PLAN.md
@@ -47,10 +47,10 @@ must_haves:
       to: "src/main/workflowMachine.ts"
       via: "imports outreachMachine, creates actors"
       pattern: "createActor.*outreachMachine"
-    - from: "src/main/workflowService.ts"
+    - from: "src/main/workflowMachine.ts"
       to: "src/main/communicationService.ts"
-      via: "invokes sendSMS, sendEmail on graduation"
-      pattern: "sendSMS|sendEmail"
+      via: "machine actors import and call sendSMS, sendEmail directly"
+      pattern: "import.*sendSMS.*sendEmail.*from.*communicationService"
     - from: "src/main/workflowPersistence.ts"
       to: "src/main/database.ts"
       via: "persists snapshots to outreach_workflows table"
@@ -112,6 +112,11 @@ Output:
     - Define actions: sendInitialOutreach (assigns contactedAt), markReplied, markScreeningStarted, markCompleted
     - Define guards: hasPhone, hasEmail, isPositiveReply (intent === 'positive' || intent === 'ambiguous'), aiCallEnabled
     - Define actors: sendInitialMessages (fromPromise that calls sendSMS + sendEmail), triggerAICall (placeholder for Phase 11)
+
+    IMPORTANT: Actor wiring for sendSMS/sendEmail:
+    - In workflowMachine.ts, import { sendSMS, sendEmail } from './communicationService'
+    - The sendInitialMessages actor (fromPromise) calls these imported functions directly
+    - Do NOT pass sendSMS/sendEmail through machine context - import them at module level
 
     State machine structure:
     - pending: on GRADUATE -> contacted
