--- a/.planning/phases/10-outreach-workflow-engine/10-02-PLAN.md
+++ b/.planning/phases/10-outreach-workflow-engine/10-02-PLAN.md
@@ -7,6 +7,8 @@ depends_on: ["10-01"]
 files_modified:
   - src/main/replyPoller.ts
   - src/main/workingHours.ts
+  - src/main/callbackScheduler.ts
+  - src/main/workflowMachine.ts
   - src/main/workflowService.ts
   - src/main/database.ts
   - src/main/index.ts
@@ -19,8 +21,9 @@ must_haves:
     - "Reply with positive intent triggers AI call escalation"
     - "Reply with negative intent archives the workflow"
     - "Messages queued outside working hours are sent when hours resume"
-    - "Missed escalations execute in order when app reopens"
+    - "Missed timeout escalations are re-triggered on app startup for contacted workflows past their timeout window"
     - "Project settings control escalation timeout and working hours"
+    - "Post-failed-screening candidate reply triggers callback scheduling flow (WRK-05)"
   artifacts:
     - path: "src/main/replyPoller.ts"
       provides: "Inbound SMS polling and intent classification"
@@ -39,6 +42,15 @@ must_haves:
           "getNextWorkingHoursStart",
           "queueMessageForWorkingHours",
         ]
+    - path: "src/main/callbackScheduler.ts"
+      provides: "Post-failed-screening callback slot generation and scheduling (WRK-05)"
+      exports:
+        [
+          "generateCallbackSlots",
+          "scheduleCallback",
+          "sendCallbackOptions",
+          "processCallbackReply",
+        ]
   key_links:
     - from: "src/main/replyPoller.ts"
       to: "src/main/workflowService.ts"
@@ -48,6 +60,14 @@ must_haves:
       to: "src/main/communicationService.ts"
       via: "delays message sending until working hours"
       pattern: "sendSMS|sendEmail"
+    - from: "src/main/callbackScheduler.ts"
+      to: "src/main/workingHours.ts"
+      via: "uses working hours to generate valid callback slots"
+      pattern: "isWithinWorkingHours|getNextWorkingHoursStart"
+    - from: "src/main/replyPoller.ts"
+      to: "src/main/callbackScheduler.ts"
+      via: "routes failed-screening replies to callback processing"
+      pattern: "processCallbackReply"
 ---
 
 <objective>
@@ -113,7 +133,14 @@ Output:
       - Look up candidateId by normalized phone
       - If found and workflow exists, classify intent and call sendWorkflowEvent(candidateId, 'REPLY_DETECTED', {intent})
       - Store inbound message in messages table with direction='inbound', status='received'
-      - Mark message SID as processed to avoid re-processing (add processed_sids table or use message SID check)
+      - Use the external_id column (message SID) + processed_at timestamp to track processing
+
+    MESSAGE SID TRACKING SCHEMA (add to database.ts migration v7 or v8):
+    - Add 'processed_at TEXT' column to messages table
+    - Add UNIQUE constraint on external_id (the Twilio SID) in messages table
+    - Query: SELECT 1 FROM messages WHERE external_id = ? to check if already processed
+    - When storing inbound message, set processed_at = ISO timestamp
+    - This approach uses the existing messages table rather than a separate processed_sids table
 
     Implement polling management:
     - startReplyPolling(projectId): setInterval every 30 seconds, store interval reference
@@ -258,6 +285,90 @@ Output:
   </verify>
   <done>
     Reply polling starts when OutreachSection mounts and stops on unmount. Project outreach settings accessible via IPC. App startup executes any missed escalations for workflows that should have timed out while app was closed.
+  </done>
+</task>
+
+<task type="auto">
+  <name>Task 4: Implement post-failed-screening callback scheduling (WRK-05)</name>
+  <files>
+    src/main/callbackScheduler.ts
+    src/main/workflowMachine.ts
+    src/main/database.ts
+  </files>
+  <action>
+    1. Create src/main/callbackScheduler.ts:
+
+    Define CallbackSlot interface:
+    ```typescript
+    interface CallbackSlot {
+      id: string;
+      candidateId: string;
+      projectId: string;
+      scheduledAt: string;  // ISO timestamp
+      status: 'pending' | 'confirmed' | 'completed' | 'cancelled';
+      recruiterNotes?: string;
+    }
+    ```
+
+    Implement generateCallbackSlots(projectId: string, count: number = 3): CallbackSlot[]
+    - Get project working hours settings
+    - Generate next N available 30-minute slots during working hours
+    - Skip already-booked slots (query callback_slots table)
+    - Return array of available slot options
+
+    Implement scheduleCallback(candidateId, projectId, slotTime): Promise<CallbackSlot>
+    - Create callback_slots record with status='pending'
+    - Return the created slot
+
+    Implement sendCallbackOptions(candidateId, projectId): Promise<void>
+    - Generate 3 callback slot options
+    - Format as SMS message: "Thanks for your interest! When works for a quick call? Reply 1, 2, or 3:\n1) Mon 2pm\n2) Tue 10am\n3) Wed 3pm"
+    - Send via sendSMS
+    - Store pending callback request in database
+
+    Implement processCallbackReply(candidateId, body: string): Promise<boolean>
+    - Parse reply (1, 2, 3, or free-form time)
+    - If valid slot selection, confirm callback and notify recruiter
+    - Return true if processed, false if unrecognized
+
+    2. Add database migration for callback_slots table:
+    ```sql
+    CREATE TABLE IF NOT EXISTS callback_slots (
+      id TEXT PRIMARY KEY,
+      candidate_id TEXT NOT NULL,
+      project_id TEXT NOT NULL,
+      scheduled_at TEXT NOT NULL,
+      status TEXT DEFAULT 'pending',
+      recruiter_notes TEXT,
+      created_at TEXT NOT NULL,
+      updated_at TEXT NOT NULL,
+      FOREIGN KEY (candidate_id) REFERENCES cvs(id) ON DELETE CASCADE,
+      FOREIGN KEY (project_id) REFERENCES projects(id) ON DELETE CASCADE
+    );
+    CREATE INDEX IF NOT EXISTS idx_callback_slots_project ON callback_slots(project_id, status);
+    CREATE INDEX IF NOT EXISTS idx_callback_slots_candidate ON callback_slots(candidate_id);
+    ```
+
+    3. Update workflowMachine.ts:
+    - Add 'scheduling_callback' state between 'failed' and a new 'callback_scheduled' state
+    - In 'failed' state: on REPLY_DETECTED -> 'scheduling_callback'
+    - In 'scheduling_callback': invoke sendCallbackOptions actor, on success -> 'callback_scheduled'
+    - In 'callback_scheduled': on CALLBACK_CONFIRMED -> 'archived' (with recruiter notified), on TIMEOUT -> 'archived'
+
+    4. Update replyPoller.ts processInboundMessages:
+    - Check if candidate is in 'callback_scheduled' state
+    - If so, call processCallbackReply instead of normal intent classification
+    - On successful callback confirmation, send CALLBACK_CONFIRMED event
+
+  </action>
+  <verify>
+    - npx tsc --noEmit passes
+    - callbackScheduler.ts exports generateCallbackSlots, scheduleCallback, sendCallbackOptions
+    - workflowMachine.ts has 'scheduling_callback' and 'callback_scheduled' states
+    - callback_slots table created in migration
+  </verify>
+  <done>
+    Post-failed-screening reply triggers callback scheduling flow. System generates available time slots based on working hours, sends options via SMS, processes candidate's slot selection, and notifies recruiter of confirmed callback. This completes WRK-05 requirement.
   </done>
 </task>
 
